new dates added

--- a/08.07.2020/index.html
+++ b/08.07.2020/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+    <title>Sendung am 08.07.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
+</head>
 <body>
     <div class="content">
         <h1>Happy Birthday Show</h1>
@@ -25,21 +26,17 @@
                 <div id="myDropdown2" class="dropdown-content">
                   <a href="https://happybirthdayshowhelsinki.github.io/15.04.2020/">15.04.2020</a>
                   <a href="https://happybirthdayshowhelsinki.github.io/18.03.2020/">18.03.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/19.02.2020">19.02.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/19.20.2020">19.02.2020</a>
                   <a href="https://happybirthdayshowhelsinki.github.io/22.01.2020">22.01.2020</a>
                 </div>
               </div></th>
               <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
             </tr>
         </table>
-        <h2>Was ist die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.</p>
-        <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
-        <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz 92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> nachhören.</p>
-        <h2>Wer moderiert die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show wird vom 15-jährigen Christian Steinberger moderiert. Christian Steinberger besucht derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.</p>
-        <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg"></a>
-        <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG"></a>
+        <h2>Sendung am 08.07.2020</h2>
+        <p>Sie können diese Sendung am 08.07.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+        <p><a href="https://helsinki.at/program/98257" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a></p>
+        <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
     </div>
     <script>
         /* When the user clicks on the button, 
@@ -61,7 +58,7 @@
             }
           }
         }
-
+    
         /* When the user clicks on the button, 
         toggle between hiding and showing the dropdown content */
         function myFunction2() {
