--- a/25.12.2019/index.html
+++ b/25.12.2019/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+    <title>Sendung am 25.12.2019 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
+</head>
 <body>
     <div class="content">
         <h1>Happy Birthday Show</h1>
@@ -32,14 +33,11 @@
               <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
             </tr>
         </table>
-        <h2>Was ist die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.</p>
-        <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
-        <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz 92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> nachhören.</p>
-        <h2>Wer moderiert die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show wird vom 15-jährigen Christian Steinberger moderiert. Christian Steinberger besucht derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.</p>
-        <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg"></a>
-        <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG"></a>
+        <h2>Sendung am 25.12.2019</h2>
+        <p><a href="https://helsinki.at/program/98250" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a></p>
+        <p><a href="https://cba.fro.at/437535" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+        <p>Heute mit Louis Tomlinson, Johannes Oerding, Jared Leto und Meghan Trainor</p>
+        <p>Heute feiern wir mit Louis Tomlinson von One Direction, Johannes Oerding, Jared Leto von Thirty Seconds To Mars und Meghan Trainor. Heute ist Christtag, wie ist eigentlich der Christbaum entstanden? Und wann hat der Papst Geburtstag? Diese Fragen klären wir in der heutigen Sendung.</p>
     </div>
     <script>
         /* When the user clicks on the button, 
@@ -61,7 +59,7 @@
             }
           }
         }
-
+    
         /* When the user clicks on the button, 
         toggle between hiding and showing the dropdown content */
         function myFunction2() {
