--- a/kontakt.html
+++ b/kontakt.html
@@ -11,31 +11,31 @@
         <h1>Happy Birthday Show</h1>
         <table>
             <tr>
-              <th><a href="index.html" class="menu">Home</a></th>
+              <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
               <th><div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="#home">15.04.2020</a>
-                  <a href="#about">13.05.2020</a>
-                  <a href="#contact">10.06.2020</a>
-                  <a href ="#ddd">08.07.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/13.05.2020">13.05.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/10.06.2020">10.06.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/08.07.2020">08.07.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/05.08.2020">05.08.2020</a>
                 </div>
               </div></th>
               <th><div class="dropdown">
                 <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
                 <div id="myDropdown2" class="dropdown-content">
-                  <a href="#home">18.03.2020</a>
-                  <a href="#about">19.02.2020</a>
-                  <a href="#contact">22.01.2020</a>
-                  <a href ="#ddd">25.12.2019</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/15.04.2020/">15.04.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/18.03.2020/">18.03.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/19.02.2020">19.02.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/22.01.2020">22.01.2020</a>
                 </div>
               </div></th>
-              <th><a href="kontakt.html" class="menu">Kontakt</a></th>
+              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
             </tr>
         </table>
         <p><a href="https://helsinki.at/program/shows/happy-birthday-show" target="_blank">Hier</a> finden Sie die Happy Birthdayshow auf der Radio Helsinki Homepage.</p>
         <p>Alle Sendungen zum Nachhören finden Sie auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a>.</p>
-        <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a>.</p>
+        <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
     </div>
     <script>
         /* When the user clicks on the button, 
