new date system

--- a/25122019/index.html
+++ b/25122019/index.html
@@ -3,40 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sendung am 08.07.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+    <title>Sendung am 25.12.2019 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
 <body>
     <div class="content">
         <h1>Happy Birthday Show</h1>
-        <table>
+          <table>
             <tr>
               <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
               <th><div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/13.05.2020">13.05.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/10.06.2020">10.06.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/08.07.2020">08.07.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/05.08.2020">05.08.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
                 </div>
               </div></th>
               <th><div class="dropdown">
                 <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
                 <div id="myDropdown2" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/15.04.2020/">15.04.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/18.03.2020/">18.03.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/19.20.2020">19.02.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/22.01.2020">22.01.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
                 </div>
               </div></th>
-              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
+              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt/" class="menu">Kontakt</a></th>
             </tr>
         </table>
-        <h2>Sendung am 08.07.2020</h2>
-        <p>Sie können diese Sendung am 08.07.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
-        <p><a href="https://helsinki.at/program/98257" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a></p>
-        <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+        <h2>Sendung am 25.12.2019</h2>
+        <p><a href="https://helsinki.at/program/98250" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a></p>
+        <p><a href="https://cba.fro.at/437535" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
+        <p>Heute mit Louis Tomlinson, Johannes Oerding, Jared Leto und Meghan Trainor</p>
+        <p>Heute feiern wir mit Louis Tomlinson von One Direction, Johannes Oerding, Jared Leto von Thirty Seconds To Mars und Meghan Trainor. Heute ist Christtag, wie ist eigentlich der Christbaum entstanden? Und wann hat der Papst Geburtstag? Diese Fragen klären wir in der heutigen Sendung.</p>
     </div>
     <script>
         /* When the user clicks on the button, 
