--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
 <body>
     <div class="content">
         <h1>Happy Birthday Show</h1>
-        <table>
-            <tr>
-              <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
-              <th><div class="dropdown">
-                <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
-                <div id="myDropdown" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/13.05.2020">13.05.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/10.06.2020">10.06.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/08.07.2020">08.07.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/05.08.2020">05.08.2020</a>
-                </div>
-              </div></th>
-              <th><div class="dropdown">
-                <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
-                <div id="myDropdown2" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/15.04.2020/">15.04.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/18.03.2020/">18.03.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/19.02.2020">19.02.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/22.01.2020">22.01.2020</a>
-                </div>
-              </div></th>
-              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
-            </tr>
-        </table>
+          <table>
+              <tr>
+                <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
+                <th><div class="dropdown">
+                  <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
+                  <div id="myDropdown" class="dropdown-content">
+                    <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
+                    <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
+                    <a href ="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
+                    <a href ="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
+                  </div>
+                </div></th>
+                <th><div class="dropdown">
+                  <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
+                  <div id="myDropdown2" class="dropdown-content">
+                    <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
+                    <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
+                    <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
+                    <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
+                  </div>
+                </div></th>
+                <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt/" class="menu">Kontakt</a></th>
+              </tr>
+          </table>
         <h2>Was ist die Happy Birthday Show?</h2>
         <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.</p>
         <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
@@ -39,6 +39,7 @@
         <h2>Wer moderiert die Happy Birthday Show?</h2>
         <p>Die Happy Birthday Show wird vom 15-jährigen Christian Steinberger moderiert. Christian Steinberger besucht derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.</p>
         <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg"></a>
+        <a href ="Christian Steinberger 3.jpeg"><img src="Christian Steinberger 3.jpeg"></a>
         <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG"></a>
     </div>
     <script>
