--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -3,40 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sendung am 19.02.2020 | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+    <title>Kontakt | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
     <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
 <body>
     <div class="content">
         <h1>Happy Birthday Show</h1>
-        <table>
+          <table>
             <tr>
               <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
               <th><div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
                 <div id="myDropdown" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/13.05.2020">13.05.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/10.06.2020">10.06.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/08.07.2020">08.07.2020</a>
-                  <a href ="https://happybirthdayshowhelsinki.github.io/05.08.2020">05.08.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
+                  <a href ="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
                 </div>
               </div></th>
               <th><div class="dropdown">
                 <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
                 <div id="myDropdown2" class="dropdown-content">
-                  <a href="https://happybirthdayshowhelsinki.github.io/15.04.2020/">15.04.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/18.03.2020/">18.03.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/19.02.2020">19.02.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/22.01.2020">22.01.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
                 </div>
               </div></th>
-              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt.html" class="menu">Kontakt</a></th>
+              <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt/" class="menu">Kontakt</a></th>
             </tr>
         </table>
-        <h2>Sendung am 19.02.2020</h2>
-        <p><a href="https://helsinki.at/program/98252" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a></p>
-        <p><a href="https://cba.fro.at/442050" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-        <p>Heute feiern wir mit Falco, Ed Sheeran, Ava Max und Mabel. Wir sind mitten in den Semesterferien, aber wieso gibt es diese Ferien eigentlich? Dieser und vielen weiteren Fragen gehen wir in der heutigen Sendung auf den Grund.</p>
+        <p><a href="https://helsinki.at/program/shows/happy-birthday-show" target="_blank">Hier</a> finden Sie die Happy Birthdayshow auf der Radio Helsinki Homepage.</p>
+        <p>Alle Sendungen zum Nachhören finden Sie auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a>.</p>
+        <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
     </div>
     <script>
         /* When the user clicks on the button, 
@@ -58,7 +57,7 @@
             }
           }
         }
-    
+
         /* When the user clicks on the button, 
         toggle between hiding and showing the dropdown content */
         function myFunction2() {
