--- a/index.html
+++ b/index.html
@@ -1,87 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
-    <link rel="stylesheet" href="/styles/stylesheet.css">
-<body>
-    <div class="content">
-        <h1>Happy Birthday Show</h1>
-          <table>
-              <tr>
-                <th><a href="https://happybirthdayshowhelsinki.github.io/index.html" class="menu">Home</a></th>
-                <th><div class="dropdown">
-                  <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
-                  <div id="myDropdown" class="dropdown-content">
-                    <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
-                    <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
-                    <a href ="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
-                    <a href ="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
-                  </div>
-                </div></th>
-                <th><div class="dropdown">
-                  <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
-                  <div id="myDropdown2" class="dropdown-content">
-                    <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
-                    <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
-                    <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
-                    <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
-                  </div>
-                </div></th>
-                <th><a href="https://happybirthdayshowhelsinki.github.io/kontakt/" class="menu">Kontakt</a></th>
-              </tr>
-          </table>
-        <h2>Was ist die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer tagesaktuelle Themen besprochen.</p>
-        <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
-        <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz 92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show" target="_blank">CBA-Plattform</a> nachhören.</p>
-        <h2>Wer moderiert die Happy Birthday Show?</h2>
-        <p>Die Happy Birthday Show wird vom 15-jährigen Christian Steinberger moderiert. Christian Steinberger besucht derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki.</p>
-        <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg"></a>
-        <a href ="Christian Steinberger 3.jpeg"><img src="Christian Steinberger 3.jpeg"></a>
-        <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG"></a>
-    </div>
-    <script>
-        /* When the user clicks on the button, 
-        toggle between hiding and showing the dropdown content */
-        function myFunction() {
-          document.getElementById("myDropdown").classList.toggle("show");
-        }
-        
-        // Close the dropdown if the user clicks outside of it
-        window.onclick = function(event) {
-          if (!event.target.matches('.dropbtn')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-              var openDropdown = dropdowns[i];
-              if (openDropdown.classList.contains('show')) {
-                openDropdown.classList.remove('show');
-              }
-            }
-          }
-        }
 
-        /* When the user clicks on the button, 
-        toggle between hiding and showing the dropdown content */
-        function myFunction2() {
-          document.getElementById("myDropdown2").classList.toggle("show");
-        }
-        
-        // Close the dropdown if the user clicks outside of it
-        window.onclick = function(event) {
-          if (!event.target.matches('.dropbtn')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-              var openDropdown = dropdowns[i];
-              if (openDropdown.classList.contains('show')) {
-                openDropdown.classList.remove('show');
-              }
-            }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+  <link rel="stylesheet" href="/styles/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/stylesheet.css">
+</head>
+
+<body>
+  <div class="content">
+    <h1>Happy Birthday Show</h1>
+    <div class="table">
+      <div class="container">
+        <div class="row">
+          <div class="table-element">
+            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/index.html">Home</a></div>
+          </div>
+          <div class="table-element">
+            <div class="col">
+              <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Kommende Sendungen</button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="table-element">
+            <div class="col">
+              <div class="dropdown">
+                <button onclick="myFunction2()" class="dropbtn">Vergangene Sendungen</button>
+                <div id="myDropdown2" class="dropdown-content">
+                  <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="table-element">
+            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/galerie/">Galerie</a></div>
+          </div>
+          <div class="table-element">
+            <div class="col"><a href="https://happybirthdayshowhelsinki.github.io/kontakt/">Kontakt</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-md-center">
+      <div class="col-md-5">
+        <div id="fotos" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#fotos" data-slide-to="0" class="active"></li>
+            <li data-target="#fotos" data-slide-to="1"></li>
+            <li data-target="#fotos" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="Christian Steinberger 1.jpg" class="d-block w-100" alt="Christian Steinberger">
+            </div>
+            <div class="carousel-item">
+              <img src="Christian Steinberger 2.jpg" class="d-block w-100" alt="Christian Steinberger">
+            </div>
+            <div class="carousel-item">
+              <img src="Christian Steinberger 3.jpg" class="d-block w-100" alt="Christian Steinberger">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#fotos" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#fotos" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
+    <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu
+      hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen
+      wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer
+      tagesaktuelle Themen besprochen.</p>
+    <h2>Wie kann ich die Happy Birthday Show anhören?</h2>
+    <p>Jeden vierten Mittwoch ist die Happy Birthday Show von 18 bis 19 Uhr auf Radio Helsinki in Graz auf der Frequenz
+      92,6 und im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> zu hören. Sie können
+      die Sendungen auch auf der <a href="https://cba.fro.at/series/happy-birthday-show"
+        target="_blank">CBA-Plattform</a> nachhören.</p>
+    <h2>Wer moderiert die Happy Birthday Show?</h2>
+    <p>Die Happy Birthday Show wird vom 15-jährigen Christian Steinberger moderiert. Christian Steinberger besucht
+      derzeit das Bundesgymnasium GIBS in Graz-Eggenberg. Er ist der jüngste Sendungsmachende bei Radio Helsinki. <a
+        href="https://happybirthdayshowhelsinki.github.io/galerie/">Galerie</a></p>
+  </div>
+
+  <script src="styles/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="styles/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="styles/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+
+  <script>
+    /* When the user clicks on the button, 
+    toggle between hiding and showing the dropdown content */
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
+
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function (event) {
+      if (!event.target.matches('.dropbtn')) {
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+          var openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
           }
         }
-        </script>
+      }
+    }
+
+    /* When the user clicks on the button, 
+    toggle between hiding and showing the dropdown content */
+    function myFunction2() {
+      document.getElementById("myDropdown2").classList.toggle("show");
+    }
+
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function (event) {
+      if (!event.target.matches('.dropbtn')) {
+        var dropdowns = document.getElementsByClassName("dropdown-content");
+        var i;
+        for (i = 0; i < dropdowns.length; i++) {
+          var openDropdown = dropdowns[i];
+          if (openDropdown.classList.contains('show')) {
+            openDropdown.classList.remove('show');
+          }
+        }
+      }
+    }
+  </script>
+
+  <script>
+    $('.carousel').carousel({
+      interval: 4000
+    });
+  </script>
+
 </body>
+
 </html>
