--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <img src="Christian Steinberger 1.jpg" class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
-              <img src="Christian Steinberger 2.jpg" class="d-block w-100" alt="Christian Steinberger">
+              <img src="Christian Steinberger 2.JPG" class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
               <img src="Christian Steinberger 3.jpg" class="d-block w-100" alt="Christian Steinberger">
