--- a/05082020/index.html
+++ b/05082020/index.html
@@ -40,7 +40,7 @@
                   <a href="https://happybirthdayshowhelsinki.github.io/15042020/">15.04.2020</a>
                   <a href="https://happybirthdayshowhelsinki.github.io/18032020/">18.03.2020</a>
                   <a href="https://happybirthdayshowhelsinki.github.io/19022020/">19.02.2020</a>
-                  <a href="https://happybirthdayshowhelsinki.github.io/22012020/">22.01.2020</a>
+                  <a href="https://happybirthdayshowhelsinki.github.io/vergangenesendungen/">Früher</a>
                 </div>
               </div>
             </div>
