--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galerie | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    <title>Vergangene Sendungen | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
+    <link rel="stylesheet" href="/styles/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/styles/stylesheet.css">
 </head>
@@ -56,9 +56,22 @@
                 </div>
             </div>
         </div>
-        <a href="Christian Steinberger 1.jpg"><img src="Christian Steinberger 1.jpg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 3.jpeg"><img src="Christian Steinberger 3.jpeg" class="galerieBilder"></a>
-        <a href="Christian Steinberger 2.JPG"><img src="Christian Steinberger 2.JPG" class="galerieBilder"></a>
+        <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/15042020">15.04.2020</a></p>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/18032020">18.03.2020</a></p>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/19022020">19.02.2020</a></p>
+        <p><span class="datum">22.01.2020:</span><br>Mit Wincent Weiss, Melendi, Michel Telo und Calvin Harris<br><a
+                href="https://helsinki.at/program/98251" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
+        <p><span class="datum">25.12.2020:</span><br>Mit Louis Tomlinson, Johannes Oerding, Jared Leto und Meghan
+            Trainor<br><a href="https://helsinki.at/program/98250" target="_blank">Programmhinweis auf der Radio
+                Helsinki Homepage</a><br><a href="https://cba.fro.at/437535" target="_blank">Sendung zum Nachhören auf
+                der CBA-Plattform</a></p>
+        <p><span class="datum">01.12.2019:</span><br>Mit Mat Kearney, Billy Paul, Lost Frequencies und Sido<br><a
+                href="https://helsinki.at/program/90492" target="_blank">Programmhinweis auf der Radio Helsinki
+                Homepage</a><br><a href="https://cba.fro.at/434880" target="_blank">Sendung zum Nachhören auf der
+                CBA-Plattform</a></p>
     </div>
 
     <script src="styles/jquery-3.4.1.slim.min.js"
