--- a/15042020/index.html
+++ b/15042020/index.html
@@ -55,7 +55,9 @@
       </div>
     </div>
     <h2>Sendung am 15.04.2020</h2>
+    <div class="col-md-6">
     <iframe src="https://cba.fro.at/440141/embed?&waveform=false" width="100%" height="99" style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/98254" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
     <p><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
