--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -4,6 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="apple-touch-icon" sizes="180x180"
+    href="https://happybirthdayshowhelsinki.github.io/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://happybirthdayshowhelsinki.github.io/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="https://happybirthdayshowhelsinki.github.io/favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://happybirthdayshowhelsinki.github.io/favicon/site.webmanifest">
+  <link rel="mask-icon" href="https://happybirthdayshowhelsinki.github.io/favicon/safari-pinned-tab.svg"
+    color="#5bbad5">
+  <link rel="shortcut icon" href="https://happybirthdayshowhelsinki.github.io/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="https://happybirthdayshowhelsinki.github.io/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
   <title>Kontakt | Happy Birthday Show auf Radio Helsinki mit Christian Steinberger</title>
   <link rel="stylesheet" href="/styles/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -71,7 +86,7 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
   <script>
-    
+
     /* When the user clicks on the button, 
     toggle between hiding and showing the dropdown content */
     function myFunction() {
