--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -75,6 +75,14 @@
         target="_blank">CBA-Plattform</a>.</p>
     <p>Bei Fragen oder Feedback freue ich mich auf ihr E-Mail an: <a
         href="mailto:happybirthdayshowhelsinki@gmail.com">happybirthdayshowhelsinki@gmail.com</a></p>
+
+
+        <form method="post" action="contact.php">
+          <textarea name="message"></textarea>
+          <input type="submit">
+      </form>
+      
+
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
