--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <h2 class="firstHeading">Was ist die Happy Birthday Show?</h2>
-    <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu
+    <p>Die Happy Birthday Show ist eine Sendung auf Radio Helsinki in Graz, die jeden vierten Mittwoch von 18 bis 19 Uhr zu
       hören ist. In jeder Sendung werden MusikerInnen vorgestellt, die um den Sendetag herum Geburtstag haben. Von ihnen
       wird Musik gespielt, dazwischen gibt es Informationen zu den MusikerInnen. Außerdem werden auch immer
       tagesaktuelle Themen besprochen.</p>
