--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
   <div class="content">
+    <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <div class="row justify-content-md-center">
       <div class="col-md-5">
