--- a/10062020/index.html
+++ b/10062020/index.html
@@ -30,10 +30,13 @@
     <h1>Happy Birthday Show</h1>
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2>Sendung am 10.06.2020</h2>
-    <p>Sie können diese Sendung am 10.06.2020 von 18 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="col-md-6">
+      <iframe src="https://cba.fro.at/456527/embed?&waveform=false" width="100%" height="99"
+        style="border:none; width:100%; height:99px;"></iframe>
+    </div>
     <p><a href="https://helsinki.at/program/98256" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
+    <p><a href="https://cba.fro.at/456527" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
     <p>Heute feiern wir mit Christina Stürmer, Alle Farben, George Ezra und Robyn. Außerdem haben heute zwei berühmte
       Schauspieler Geburtstag: Michael J. Fox, zum Beispiel bekannt für seine Rolle in „Zurück in die Zukunft“ und
       Johnny Depp, er spielte zum Beispiel bei „Fluch der Karibik“ mit.</p>
