--- a/08072020/index.html
+++ b/08072020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98257" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Mathea, Post Malone, Dan Reynolds von den Imagine Dragons und Era Istrefi. Vor 161 Jahren
+      läuteten die Glocken des Big Ben das erste Mal. Außerdem ist heute Tag der Blaubeeren und Tag der
+      Mandelschokolade.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
