newsletter anmelden statt abonnieren

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -84,7 +84,7 @@
               <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
               <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                   name="b_3f2777a6ea3d2d686fe42c4a9_0da4f53d1d" tabindex="-1" value=""></div>
-              <div class="clear"><input id="abonnieren" type="submit" value="Abonnieren" name="subscribe"
+              <div class="clear"><input id="abonnieren" type="submit" value="Anmelden" name="subscribe"
                   id="mc-embedded-subscribe"></div>
             </div>
           </form>
