--- a/vergangenesendungen/index.html
+++ b/vergangenesendungen/index.html
@@ -30,13 +30,17 @@
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
         <h2>Vergangene Sendungen</h2>
+        <p><a href="https://happybirthdayshowhelsinki.github.io/05082020">05.08.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/08072020">08.07.2020</a></p>
         <p><a href="https://happybirthdayshowhelsinki.github.io/10062020">10.06.2020</a></p>
-        <p><a href="https://happybirthdayshowhelsinki.github.io/13052020">13.05.2020</a></p>
+        <p><span class="datum">13.05.2020:</span><br>Mit Tones and I, Bono, Enrique Iglesias und Janet Jackson<br><a
+                href="https://helsinki.at/program/98255" target="_blank">Programmhinweis auf
+                der Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/453590" target="_blank">Sendung zum
+                Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">15.04.2020:</span><br>Wiederholung vom 22.01.2020: Mit Wincent Weiss, Melendi, Michel
-            Telo und Calvin Harris<br><a href="https://helsinki.at/program/98254" target="_blank">Programmhinweis auf der Radio Helsinki
-                Homepage</a><br><a href="https://cba.fro.at/440141" target="_blank">Sendung zum Nachhören auf der
-                CBA-Plattform</a></p>
+            Telo und Calvin Harris<br><a href="https://helsinki.at/program/98254" target="_blank">Programmhinweis auf
+                der Radio Helsinki Homepage</a><br><a href="https://cba.fro.at/440141" target="_blank">Sendung zum
+                Nachhören auf der CBA-Plattform</a></p>
         <p><span class="datum">18.03.2020:</span><br>Wiederholung vom 19.02.2020: Mit Falco, Ed Sheeran, Ava Max und
             Mabel<br><a href="https://helsinki.at/program/98253" target="_blank">Programmhinweis auf der Radio Helsinki
                 Homepage</a><br><a href="https://cba.fro.at/442050" target="_blank">Sendung zum Nachhören auf der
