--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -94,6 +94,8 @@
         <!--End mc_embed_signup-->
       </div>
     </div>
+    <h2 id="impressum">Impressum</h2>
+    <p>Christian Steinberger<br>Radio Helsinki 92,6 MHz - Freies Radio Graz<br>Schönaugasse 8<br>8010 Graz</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
