--- a/02092020/index.html
+++ b/02092020/index.html
@@ -37,7 +37,7 @@
     <p><a href="https://helsinki.at/program/98259" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
     <p><a href="https://cba.fro.at/464096" target="_blank">Sendung zum Nachhören auf der CBA-Plattform</a></p>
-    <p>Heute feiern wir mit Freddie Mercury von Queen, Pink Avicii und Namika. Morgen, am 3. September, ist der
+    <p>Heute feiern wir mit Freddie Mercury von Queen, Pink, Avicii und Namika. Morgen, am 3. September, ist der
       Nationalfeiertag von San Marino. San Marino ist die älteste noch bestehende Republik der Welt. Außerdem hatte
       Johann Wolfgang von Goethe am Freitag Geburtstag.</p>
   </div>
