--- a/30092020/index.html
+++ b/30092020/index.html
@@ -34,7 +34,9 @@
         href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
     <p><a href="https://helsinki.at/program/98260" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
     </p>
-    <p>Der Inhalt dieser Sendung wurde noch nicht bekannt gegeben. Bitte noch um ein wenig Geduld... &#128521;</p>
+    <p>Heute feiern wir mit Udo Jürgens, Avril Lavigne, Sting und Leigh-Anne Pinnock von Little Mix. Die Schauspielerin
+      Julie Andrews hat morgen Geburtstag, sie wurde unter anderem durch ihre Rolle in Mary Poppins bekannt. Außerdem
+      ist morgen Tag des Kaffees.</p>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
