XXL-Jubiläumsausgabe Foto

--- a/galerie/index.html
+++ b/galerie/index.html
@@ -29,6 +29,7 @@
     <div class="content">
         <h1>Happy Birthday Show</h1>
         <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
+        <a href="jubilaeumsausgabe.jpg"><img src="jubilaeumsausgabe.jpg" class="galerieBilder"></a>
         <a href="christiansteinberger5.jpg"><img src="christiansteinberger5.jpg" class="galerieBilder"></a>
         <a href="christiansteinberger4.jpg"><img src="christiansteinberger4.jpg" class="galerieBilder"></a>
         <a href="christiansteinberger1.jpg"><img src="christiansteinberger1.jpg" class="galerieBilder"></a>
