--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <img src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg" class="d-block w-100"
+                alt="Jubiläumsausgabe">
+            </div>
+            <div class="carousel-item">
               <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger5.jpg"
                 class="d-block w-100" alt="Christian Steinberger">
             </div>
             <div class="carousel-item">
               <img src="https://happybirthdayshowhelsinki.github.io/galerie/christiansteinberger4.jpg"
-                class="d-block w-100" alt="Christian Steinberger">
-            </div>
-            <div class="carousel-item">
-              <img src="https://happybirthdayshowhelsinki.github.io/galerie/karussell/christiansteinberger1kar.jpg"
                 class="d-block w-100" alt="Christian Steinberger">
             </div>
           </div>
