--- a/25112020/index.html
+++ b/25112020/index.html
@@ -33,15 +33,36 @@
     <div w3-include-html="https://happybirthdayshowhelsinki.github.io/standard.html"></div>
     <h2 class="jubilaeum-1 jubilaeum-2 alert alert-success">XXL-Jubiläumsausgabe am 25.11.2020 um 17:30 Uhr</h2>
     <h3 class="jubilaeum-3">Die Happy Birthday Show wird ein Jahr alt!</h3>
-    <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gebührend gefeiert. Deshalb gibt es am 25.
-      November 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00 Uhr
-      und haben somit 90 statt wie üblich 60 Minuten. Neben dem üblichen Programm, also den MusikerInnen die Geburtstag
-      haben, wird es dieses Mal auch ein paar Hintergrundinformationen zur Happy Birthday Show geben. Genauere Inhalte
-      werden noch bekannt gegeben... &#128521;</p>
-    <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki Homepage</a>
-    </p>
-    <p>Sie können die XXL-Jubiläumsausgabe am 25.11.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
-        href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    <div class="row">
+      <div class="col-md-8">
+        <p>Und wenn eine Geburtstags-Sendung Geburtstag hat, dann wird das gebührend gefeiert. Deshalb gibt es am 25.
+          November 2020 eine XXL-Jubiläumsausgabe. Wir beginnen bereits um 17:30 Uhr statt wie normalerweise um 18:00
+          Uhr
+          und haben somit 90 statt wie üblich 60 Minuten. Neben dem üblichen Programm, also den MusikerInnen die
+          Geburtstag
+          haben, wird es dieses Mal auch ein paar Hintergrundinformationen zur Happy Birthday Show geben. Genauere
+          Inhalte
+          werden noch bekannt gegeben... &#128521;</p>
+        <div class="jubilaeum-large">
+          <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki
+              Homepage</a>
+          </p>
+          <p>Sie können die XXL-Jubiläumsausgabe am 25.11.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder
+            im <a href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+        </div>
+      </div>
+      <div class="col-md-4 jubilaeum-center">
+        <img class="jubilaeums-foto" src="https://happybirthdayshowhelsinki.github.io/galerie/jubilaeumsausgabe.jpg"
+          alt="Jubiläumsausgabe">
+      </div>
+    </div>
+    <div class="jubilaeum-small">
+      <p><a href="https://helsinki.at/program/100487" target="_blank">Programmhinweis auf der Radio Helsinki
+          Homepage</a>
+      </p>
+      <p>Sie können die XXL-Jubiläumsausgabe am 25.11.2020 von 17:30 bis 19 Uhr in Graz auf der Frequenz 92,6 oder im <a
+          href="https://live.helsinki.at" target="_blank">Radio Helsinki Livestream</a> hören.</p>
+    </div>
   </div>
 
   <script src="styles/jquery-3.4.1.slim.min.js"
